fixed display overflow

--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
   display: flex;
   align-items: center;
   font-size: 40px;
+  overflow: hidden;
 }
 button:hover {
   background-color: rgba(255, 255, 255, 0.9);
